- 3 additional CPU graph variants switched with the L4 key (at this moment for multi core processors only)
- New default CPU Screen (at this moment for multi core processors only)
- Display unicore graphs only on the CPU screen with the option -u (--unicore)
SVN 505:
- Bugfix: Render bottom line on the Memory Screen once
SVN 509:
- Temperature sensors depends on the lmsensors sysfs filesystem
SVN 510:
- Temperature sensor's autodetect
- Force user sensor id with the option -s id (The id should point to sysfs path /sys/class/hwmon/hwmon[id]/device/temp1_input)
SVN 511:
- Improve sensor's autodetect
- Clean up
SVN 512:
- CPU Screens variants for uni core processors
- CPU frequency info (if available)
- Battery Screen is enabled if available
- Clean up
SVN 513:
- Improve bottom line and keywatch logic
SVN 514:
- Many fixes, clean up
- Changed version to 1.90
- CPU Frequency use proper sysfs variable
- New Summary Screen indicators
- Network current traffic info in the bottom line
- Refactor CPU variants into separates additional screens: Summary, CPU and CPU Freq.
- New Fan Speed Screen
- After change screen cycle the info bar content is set to the screen default one.
- Net Screen scaling is now controlled with the L4 key
- Force start temperature sensor id with the option -t id (The id should point to sysfs path /sys/class/hwmon/hwmon[id]/...)
- Force start fan speed sensor id with the option -f id (The id should point to sysfs path /sys/class/hwmon/hwmon[id]/...)
- Force to show temperature [id] in place of the maximal one on the Summary Screen with the option ie -gt 1
                    (the id should point to sysfs path /sys/class/hwmon/hwmon../device/temp[id]_input)
- On the Fan / Temp Screen  Current sensor is controlled with the L4 key (on systems with more then one sensor only).
- Every Screen has his own mode now (except Swap, Memory and Battery Screen)
SVN 515:
- Fixed temperature / fan sensor lost
- Fixed screen cycle